# 3d-recon

./: CMakeLists.txt  README.md  main.cpp  testing.blend
inc/: camera.h  cameracalibrator.h  reconstruction.h  safequeue.h  settings.h  utils.h
literature/: README.md
src/: camera.cpp  cameracalibrator.cpp  reconstruction.cpp  utils.cpp
